# lua-batteries

./: .gitignore  .gitmodules  CHANGELOG.md  INSTALL.md  LICENSE  README.md  lua.sh  meson.build  meson_options.txt  modules.py
cross/: aarch64-linux-android31.ini  aarch64-unknown-linux-android32.ini  i686-w64-mingw32.ini  x86_64-w64-mingw32.ini
modules/luasocket/: meson.build
scripts/: lua54.sh  luajit51.sh
subprojects/: argparse.wrap  cffi-lua.wrap  compat53_bit32.wrap  date.wrap  inspect.wrap  lanes.wrap  libui.wrap  libzip.wrap  lpeg.wrap  lrexlib-pcre2.wrap  ltui.wrap  lua-cjson.wrap  lua-openssl.wrap  lua-protobuf.wrap  lua-sdl2.wrap  lua-zip.wrap  lua-zlib.wrap  lua.wrap  luafilesystem.wrap  luajit.wrap  luaossl.wrap  luaposix.wrap  luarocks.wrap  luasec.wrap  luasocket.wrap  luasql-sqlite3.wrap  luastatic.wrap  luautf8.wrap  lui.wrap  luv.wrap  lyaml.wrap  magic_enum.wrap  penlight.wrap  sdl2_mixer.wrap  sol2.wrap  sqlite3.wrap  toml.wrap  tomlplusplus.wrap  uuid.wrap  winapi.wrap  (+1 more)
subprojects/argparse/: meson.build
subprojects/argparse/luarocks/: argparse-0.7.1-2.rockspec
subprojects/binser/: meson.build
subprojects/cffi-lua/: meson.build
subprojects/cffi-lua/subprojects/: libffi.wrap
subprojects/date/: meson.build
subprojects/inspect/: meson.build
subprojects/inspect.lua/: meson.build
subprojects/lanes/: meson.build
subprojects/lrexlib-pcre2/: exports.def  meson.build
subprojects/lrexlib-pcre2/luarocks/: lrexlib-pcre2-2.9.1-1.rockspec
subprojects/ltui/: meson.build
subprojects/ltui/luarocks/: rock_manifest
subprojects/lua/: lua.res  meson.build  meson_options.txt
subprojects/lua-cjson/: exports.def  meson.build
subprojects/lua-cjson/scripts/: json2lua.bat  json2lua.sh  lua2json  lua2json.sh
subprojects/lua-cjson/scripts/lua/: json2lua.bat  json2lua.sh  lua2json.bat  lua2json.sh
subprojects/lua-cjson/scripts/luajit/: json2lua.bat  json2lua.sh  lua2json.bat  lua2json.sh
subprojects/lua-openssl/: meson.build  meson_options.txt
subprojects/lua-openssl/luarocks/: openssl-0.8.2-1.rockspec  openssl-0.8.3-2.rockspec
subprojects/lua-protobuf/: meson.build
subprojects/lua-protobuf/luarocks/: lua-protobuf-0.4.1-1.rockspec  lua-protobuf-0.4.2-1.rockspec
subprojects/lua-sdl2/: meson.build
subprojects/lua-zip/: meson.build
subprojects/lua-zip/subprojects/libzip/: meson-zipconf.h.in  meson.build
subprojects/lua-zlib/: meson.build  meson_options.txt
subprojects/luafilesystem/: meson.build
subprojects/luajit/: luaconf.h  luajit.rc  meson.build  meson_options.txt
subprojects/luajit/patches/: lua-batteries-updated-lua-search-path-on-windows.patch  lua-meson-updated-lua-search-path-on-windows.patch
subprojects/luaposix/: meson.build
subprojects/luarocks/: luarocks-jit.sh  luarocks.sh  meson.build  meson_options.txt
subprojects/luarocks/config/: config-darwin-clang.lua  config-i686-pc-windows-msvc.lua  config-windows-clang.lua  config-windows-mingw.lua  config-x86_64-pc-windows-clang.lua  config-x86_64-pc-windows-mingw.lua  config-x86_64-pc-windows-msvc.lua  manifest  rock_manifest
subprojects/luarocks/scripts/: luarocks-admin-jit.bat  luarocks-admin-jit.sh  luarocks-admin.bat  luarocks-admin.sh  luarocks-jit.bat  luarocks-jit.sh  luarocks.bat  luarocks.sh
subprojects/luarocks/tools/: README.md
subprojects/luasdl2/: meson.build
subprojects/luasdl2/luarocks/: lua-sdl2-2.0.5-6.rockspec
subprojects/luasdl2/subprojects/: libtiff.wrap
subprojects/luasec/: meson.build
subprojects/luasocket/: meson.build  meson_options.txt
subprojects/luasql-sqlite3/: meson.build
subprojects/luastatic/: meson.build
subprojects/luastatic/luarocks/: luastatic-scm-1.rockspec
subprojects/luastatic/scripts/: luastatic.sh
subprojects/luautf8/: exports.def  meson.build
subprojects/lui/: exports.def  meson.build  meson_options.txt
subprojects/lui/luarocks/: lui-scm-0.rockspec
subprojects/luv/: exports.def  meson.build
subprojects/lyaml/: meson.build
subprojects/packagefiles/argparse/: meson.build
subprojects/packagefiles/cffi-lua/: meson.build
subprojects/packagefiles/compat53_bit32/: meson.build
subprojects/packagefiles/date/: meson.build
subprojects/packagefiles/inspect/: meson.build
subprojects/packagefiles/lanes/: meson.build
subprojects/packagefiles/libui/: meson.build
subprojects/packagefiles/libzip/: meson-config.h.in  meson.build
subprojects/packagefiles/lpeg/: meson.build
subprojects/packagefiles/lrexlib-pcre2/: meson.build
subprojects/packagefiles/ltui/: meson.build
subprojects/packagefiles/lua/: lua.rc  meson.build  meson_options.txt
subprojects/packagefiles/lua-cjson/: meson.build
subprojects/packagefiles/lua-openssl/: meson.build
subprojects/packagefiles/lua-protobuf/: meson.build
subprojects/packagefiles/lua-sdl2/: meson.build
subprojects/packagefiles/lua-zip/: meson.build
subprojects/packagefiles/lua-zlib/: meson.build
subprojects/packagefiles/luafilesystem/: meson.build
subprojects/packagefiles/luajit/: meson.build  meson_options.txt
subprojects/packagefiles/luaossl/: meson.build
subprojects/packagefiles/luaposix/: meson.build
subprojects/packagefiles/luarocks/: meson.build
subprojects/packagefiles/luasec/: meson.build
subprojects/packagefiles/luasocket/: meson.build
subprojects/packagefiles/luasql-sqlite3/: meson.build
subprojects/packagefiles/luastatic/: meson.build
subprojects/packagefiles/luautf8/: meson.build
subprojects/packagefiles/lui/: meson.build
subprojects/packagefiles/luv/: meson.build
subprojects/packagefiles/lyaml/: meson.build
subprojects/packagefiles/penlight/: meson.build
subprojects/packagefiles/sol2/: meson.build
subprojects/packagefiles/toml/: meson.build
subprojects/packagefiles/tomlplusplus/: meson.build
subprojects/packagefiles/uuid/: meson.build
subprojects/packagefiles/winapi/: meson.build
subprojects/penlight/: meson.build
subprojects/toml/: meson.build
subprojects/toml.lua/: exports.def  meson.build
subprojects/uuid/: meson.build
subprojects/winapi/: meson.build
subprojects/xml2lua/: meson.build
(+20 files in other folders)
