option(
  'modules',
  type: 'array',
  choices: [
    'all', 'none',
    'argparse',
    'binser',
    'cffi-lua',
    'date',
    'inspect',
    'lanes',
    'lrexlib-pcre2',
    'lua-cjson',
    'luafilesystem',
    'luaossl',
    'lua-protobuf',
    'luasec',
    'luasocket',
    'luasql-sqlite3',
    'luastatic',
    'luautf8',
    'lua-zip',
    'lua-zlib',
    'luv',
    'lyaml',
    'openssl',
    'penlight',
    'toml',
    'uuid',
    'xml2lua'
  ],
  value: ['all'],
  description: 'lua modules to install'
)

option(
  'extra-modules',
  type: 'array',
  choices: [
    'all', 'none',
    'lua-sdl2',
    'ltui',
    'lui'
  ],
  value: ['none'],
  description: 'lua extra modules to install'
)

option(
  'os-modules',
  type: 'boolean',
  value: true,
  description: 'install winapi on windows and luaposix on posix platforms'
)

option(
  'standalone',
  type: 'boolean',
  value: false,
  description: 'build external dependencies even if they are present'
)

option(
  'luajit',
  type: 'boolean',
  value: false,
  description: 'build everything using luajit instead of lua'
)

option(
  'luarocks',
  type: 'boolean',
  value: true,
  description: 'install luarocks'
)

option(
  'readline',
  type: 'boolean',
  value : false,
  description: 'link lua library with readline library'
)

option(
  'apps',
  type: 'boolean',
  value : true,
  description: 'build executables'
)

option(
  'icons',
  type: 'boolean',
  value : true,
  description: 'attach icons to apps on windows'
)
